# real-time-sign-language-classification

./: .dockerignore  Dockerfile  README.md  augmentation.py  collect images.py  create_data.ipynb  inference.py  main.py  pyproject.toml  requirements-web.txt  sign language classification.py
notebooks/: train_model.ipynb
src/: collect_images.py  inference.py
src/web/: app.py
src/web/static/css/: style.css
src/web/static/js/: app.js
src/web/templates/: index.html
static/css/: style.css
static/js/: app.js
templates/: index.html
utils/: data.pkl  model.pkl
