[project]
name = "real-time-sign-language-classification"
version = "1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.21"
dependencies = [
    "albumentations>=1.1.0",
    "flask==2.3.3",
    "flask-cors==4.0.0",
    "mediapipe>=0.8.9.1",
    "numpy>=1.19.5",
    "opencv-python>=4.5.5.64",
    "pillow>=8.4.0",
    "python-dotenv==1.0.0",
    "scikit-learn==1.3.0",
]
